--- a/tutorial.css
+++ b/tutorial.css
@@ -1,4 +1,4 @@
-# Dise-ohtml{
+html{
   scroll-behavior: smooth;
 }
 body{display: flex; flex-flow: column;font-family: 'Oswald', sans-serif; margin:0;}
